Modify HTML to include Java Applet

--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Plugin Webpage</title>
     <link rel="stylesheet" href="style.css">
-    <title>Test Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            text-align: center;
+        }
+        .applet-container {
+            border: 2px solid #ccc;
+            padding: 20px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Test is good.</h1>
+    <div class="container">
+        <h1>Test Java Plugin Webpage</h1>
+        <p>This is a basic webpage with a space for a Java applet.</p>
+        
+        <div class="applet-container">
+            <p>Your Java applet will be placed here.</p>
+            <!-- You can embed your Java applet here -->
+            <!-- Example: <applet code="YourApplet.class" width="300" height="200"></applet> -->
+        </div>
+    </div>
 </body>
 </html>
